@@ -7,9 +7,10 @@
 * Audio: Master Lautstärkeregler hinzugefügt
 * map04: Color Tint zu Feuer hinzugefügt
 
-## Alpha 018
+## Alpha 018 (Unreleased)
 
-* Neuer Gegner hinzugefügt: Fass
+* Neuer Gegner hinzugefügt: Fass (KI fehlt noch)
+* Menüs optimiert
 
 ## Alpha 017 (23.08.2024)
 
